--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,9 @@ name: ZombieApocalypse
 version: 1.0
 author: BananaPuncher714
 description: Adds cool stuff
+softdepend:
+- "MVdWPlaceholderAPI"
+- "PlaceholderAPI"
 commands:
   zombieapocalypse:
     description: displays information about the Zombie Apocalypse plugin
